k8s/config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: config
  name: config
  namespace: koiner
spec:
  replicas: 1
  selector:
    matchLabels:
      service: config
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: config
    spec:
      containers:
        - env:
            - name: DESCRIPTORS_TAG
              value: master
          image: elimbatido/kompose-koinos-config:v0.1.2
          name: config
          volumeMounts:
            - mountPath: /koinos
              name: koinos-data
      restartPolicy: Always
      volumes:
        - name: koinos-data
          persistentVolumeClaim:
            claimName: koinos-data
