k8s/nginx-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: koiner
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: nginx-storage
          mountPath: /etc/nginx
  volumes:
    - name: nginx-storage
