k8s/p2p-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: p2p
  name: p2p
  namespace: koiner
spec:
  replicas: 1
  selector:
    matchLabels:
      service: p2p
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: p2p
    spec:
      containers:
        - args:
            - --basedir=/koinos
          image: koinos/koinos-p2p:v0.3.0
          name: p2p
          ports:
            - containerPort: 8888
          volumeMounts:
            - mountPath: /koinos
              name: koinos-data
      restartPolicy: Always
      volumes:
        - name: koinos-data
          persistentVolumeClaim:
            claimName: koinos-data
