k8s/koiner-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koiner-api
  name: koiner-api
  namespace: koiner
spec:
  ports:
    - name: "8000"
      protocol: TCP
      port: 8000
      targetPort: 3000
  selector:
    service: koiner-api
  type: LoadBalancer
