k8s/p2p-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: p2p
  name: p2p
  namespace: koiner
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    service: p2p
